PHP Control Structur

--- a/web1/Table.html
+++ b/web1/Table.html
@@ -44,9 +44,9 @@
         </div>  
       </nav>
 
-      <div class="col-12 col-md-8 col-lg-10 container" style="background-color:; width: 100px;">
+      <div class="col-12 col-md-8 col-lg-8 container" style="background-color:; width: 100px;">
         <h3 align="center" style="margin-top: 50px;">Data Komentar</h3>         
-        <table class="table table-bordered table-hover" style="margin-top: 20px">
+        <table class="table table-bordered table-hover" style="margin-top: 20px;">
           <thead style="background-color: #33ff77;">
             <tr>
               <th scope="col">No</th>
